--- a/mysample.yml
+++ b/mysample.yml
@@ -6,3 +6,7 @@
         apt: 
             name: apache2
             state: absent
+      - name: i want to install git
+        apt: 
+            name: git
+            state: present     
