--- a/mysample.yml
+++ b/mysample.yml
@@ -9,4 +9,4 @@
       - name: i want to install git
         apt: 
             name: git
-            state: absent   
+            state: present   
