--- a/mysample.yml
+++ b/mysample.yml
@@ -5,4 +5,8 @@
       - name: i want to install apache
         apt: 
             name: apache2
-            state: present
+            state: absent
+      - name: i want to install git
+        apt: 
+            name: git
+            state: present 
